upgrade to java 21, tests